k8s/manifests/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - port: 4001
      targetPort: 4001
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: oz/auth
          ports:
            - containerPort: 4001
