k8s/manifests/vision.yaml
apiVersion: v1
kind: Service
metadata:
  name: vision
spec:
  selector:
    app: vision
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vision
  labels:
    app: vision

spec:
  replicas: 1
  selector:
    matchLabels:
      app: vision
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: vision
    spec:
      containers:
        - name: vision
          image: oz/vision
          ports:
            - containerPort: 5001
